compiler/lume_parse/src/snapshots/lume_parse__tests__generic_method_snapshots@empty_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<>() -> void {} }\")"
---
SOURCE_FILE@0..36
  IMPL@0..36
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_SEGMENT@5..10
          PATH_TYPE@5..10
            NAME@5..9
              IDENT@5..9 "Test"
            WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..34
      SIG@12..32
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..21
          LESS@19..20 "<"
          GREATER@20..21 ">"
        PARAM_LIST@21..23
          LEFT_PAREN@21..22 "("
          RIGHT_PAREN@22..23 ")"
        WHITESPACE@23..24 " "
        RETURN_TYPE@24..32
          ARROW@24..26 "->"
          WHITESPACE@26..27 " "
          NAMED_TYPE@27..32
            PATH@27..32
              PATH_SEGMENT@27..32
                PATH_TYPE@27..32
                  NAME@27..31
                    IDENT@27..31 "void"
                  WHITESPACE@31..32 " "
      BLOCK@32..34
        LEFT_BRACE@32..33 "{"
        RIGHT_BRACE@33..34 "}"
    WHITESPACE@34..35 " "
    RIGHT_BRACE@35..36 "}"
