compiler/lume_parse/src/snapshots/lume_parse__tests__generic_method_snapshots@multiple_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"impl Test { fn test<T1, T2>() -> void {} }\")"
---
SOURCE_FILE@0..42
  IMPL@0..42
    IMPL_KW@0..4 "impl"
    WHITESPACE@4..5 " "
    NAMED_TYPE@5..10
      PATH@5..10
        PATH_SEGMENT@5..10
          PATH_TYPE@5..10
            NAME@5..9
              IDENT@5..9 "Test"
            WHITESPACE@9..10 " "
    LEFT_BRACE@10..11 "{"
    WHITESPACE@11..12 " "
    METHOD@12..40
      SIG@12..38
        FN_KW@12..14 "fn"
        WHITESPACE@14..15 " "
        NAME@15..19
          IDENT@15..19 "test"
        BOUND_TYPES@19..27
          LESS@19..20 "<"
          BOUND_TYPE@20..22
            NAME@20..22
              IDENT@20..22 "T1"
          COMMA@22..23 ","
          WHITESPACE@23..24 " "
          BOUND_TYPE@24..26
            NAME@24..26
              IDENT@24..26 "T2"
          GREATER@26..27 ">"
        PARAM_LIST@27..29
          LEFT_PAREN@27..28 "("
          RIGHT_PAREN@28..29 ")"
        WHITESPACE@29..30 " "
        RETURN_TYPE@30..38
          ARROW@30..32 "->"
          WHITESPACE@32..33 " "
          NAMED_TYPE@33..38
            PATH@33..38
              PATH_SEGMENT@33..38
                PATH_TYPE@33..38
                  NAME@33..37
                    IDENT@33..37 "void"
                  WHITESPACE@37..38 " "
      BLOCK@38..40
        LEFT_BRACE@38..39 "{"
        RIGHT_BRACE@39..40 "}"
    WHITESPACE@40..41 " "
    RIGHT_BRACE@41..42 "}"
