compiler/lume_parse/src/snapshots/lume_parse__tests__generic_struct_snapshots@constrained_generic.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<T: Numeric> {}\")"
---
SOURCE_FILE@0..26
  STRUCT@0..26
    STRUCT_KW@0..6 "struct"
    WHITESPACE@6..7 " "
    NAME@7..11
      IDENT@7..11 "Test"
    BOUND_TYPES@11..23
      LESS@11..12 "<"
      BOUND_TYPE@12..22
        IDENT@12..13 "T"
        CONSTRAINTS@13..22
          COLON@13..14 ":"
          WHITESPACE@14..15 " "
          NAMED_TYPE@15..22
            PATH@15..22
              PATH_SEGMENT@15..22
                PATH_TYPE@15..22
                  IDENT@15..22 "Numeric"
      GREATER@22..23 ">"
    WHITESPACE@23..24 " "
    LEFT_BRACE@24..25 "{"
    RIGHT_BRACE@25..26 "}"
