compiler/lume_parse/src/snapshots/lume_parse__tests__generic_struct_snapshots@empty_generics.snap
---
source: compiler/lume_parse/src/tests.rs
expression: "parse(Target :: Item, \"struct Test<> {}\")"
---
SOURCE_FILE@0..14
  STRUCT@0..14
    STRUCT_KW@0..6 "struct"
    IDENT@6..10 "Test"
    BOUND_TYPES@10..12
      LESS@10..11 "<"
      GREATER@11..12 ">"
    LEFT_BRACE@12..13 "{"
    RIGHT_BRACE@13..14 "}"
